<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".mvvm.home.view.FragmentHome"
        android:background="@drawable/fondo">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarHome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple_500"
            app:titleTextColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <Button
            android:id="@+id/button_paquete"
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:text="@string/btn_paquete"
            android:textSize="@dimen/btn_name_size"
            android:textColor="@color/azul"
            android:backgroundTint="@color/azul_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_hotel"
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:text="@string/btn_hotel"
            android:textSize="@dimen/btn_name_size"
            android:textColor="@color/azul"
            android:backgroundTint="@color/azul_button"
            app:layout_constraintBottom_toTopOf="@+id/button_paquete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_vuelo"
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:text="@string/btn_vuelo"
            android:textSize="@dimen/btn_name_size"
            android:textColor="@color/azul"
            android:backgroundTint="@color/azul_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_paquete" />

        <Button
            android:id="@+id/btn_cerrar_sesion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonCerrarSesion"
            android:textSize="10sp"
            android:textColor="@color/white"
            android:backgroundTint="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>