<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fondo_usuario"
        android:id="@+id/search"
        tools:context=".mvvm.search.view.SearchFragment">

        <include
            android:id="@+id/toolbar"
            layout="@layout/custom_toolbar" />


        <Button
            android:id="@+id/btn_epoch_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/esquina_redondeada"
            android:text="FECHA DE RESERVA"
            android:textColor="#00204A"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_epoch_hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:background="@drawable/esquina_redondeada"
            android:text="HORA DE RESERVA"
            android:textColor="#00204A"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline2" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:background="@drawable/esquina_redondeada"
            android:gravity="center"
            android:text="@string/text_destino"
            android:textColor="#00204A"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.339" />

        <EditText
            android:id="@+id/editTextNameDestination"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:background="@drawable/esquina_redondeada_edit_text"
            android:inputType="text"
            android:textColor="@color/white"
            android:layout_marginLeft="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.416" />

        <ImageButton
            android:id="@+id/ic_location"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/ic_location"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toEndOf="@+id/editTextNameDestination"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />


        <TextView
            android:id="@+id/textView"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:background="@drawable/esquina_redondeada"
            android:gravity="center"
            android:text="@string/text_num_personas"
            android:textColor="#00204A"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.58" />

        <EditText
            android:id="@+id/editTextNumPeople"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:background="@drawable/esquina_redondeada_edit_text"
            android:inputType="number"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.68" />

        <Button
            android:id="@+id/btn_ingresar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#00204A"
            android:text="@string/btn_ingresar"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.918" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>